syntax = "proto3";

option go_package = "proto/tours";

// Importing google annotations for HTTP options
import "google/protobuf/empty.proto";

// Defining the service for the Tour API gateway
service TourService {
    rpc GetAllTours(google.protobuf.Empty) returns (GetAllToursResponse) {}

    rpc GetAllToursByGuide(GetAllToursByGuideRequest) returns (GetAllToursByGuideResponse) {}

    rpc GetTourById(GetTourByIdRequest) returns (GetTourByIdResponse) {}

    rpc AddTour(AddTourRequest) returns (google.protobuf.Empty) {}
}


message GetAllToursResponse {
    repeated Tour tours = 1;
}

// Request message for getting tours by guide
message GetAllToursByGuideRequest {
    string guide_id = 1;
}

message GetAllToursByGuideResponse {
    repeated Tour tours = 1;
}

message GetTourByIdRequest {
    string id = 1;
}

message GetTourByIdResponse {
    Tour tour = 1;
}

message AddTourRequest {
    string name = 1;
    string description = 2;
    double length = 3;
    repeated string tags = 4;
    int32 difficulty = 5;
    double price = 6;
    string token = 7;
}



message Tour {
    string id = 1;
    string name = 2;
    string description = 3;
    double length = 4;
    repeated string tags = 5;
    int32 difficulty = 6;
    double price = 7;
    string guide_id = 8;
}
